--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: "Run build and deploy"
 
 on:
-  push:
-    branches: [ 'master' ]
+  release:
+    types: [ 'published' ]
 
 jobs:
   docker:
@@ -22,5 +22,7 @@ jobs:
 
       - name: Execute image build and push
         run: |
-          docker build -t ghcr.io/pcvolkmer/mv64e-rest-to-kafka-gateway .
-          docker push ghcr.io/pcvolkmer/mv64e-rest-to-kafka-gateway
+          docker build -t ghcr.io/${{ github.repository }} .
+          docker tag ghcr.io/${{ github.repository }} ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+          docker push ghcr.io/${{ github.repository }}
+          docker push ghcr.io/${{ github.repository }}:${{ github.ref_name }}
