--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: ci
+name: test
 
 on:
   push:
@@ -10,7 +10,7 @@ permissions:
   contents: read
 
 jobs:
-  docker:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -25,5 +25,4 @@ jobs:
             sh -c "
               apk update;
               apk add cmake make musl-dev g++ perl;
-              cargo build --release;
               cargo test --release"
