--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ log = "0.4"
 axum = { version = "0.8", features = ["tracing"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
-tokio = { version = "1.49", features = ["rt-multi-thread"] }
+tokio = { version = "1.49", features = ["rt-multi-thread", "signal"] }
 tower-http = { version = "0.6", features = ["trace"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
